<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.UploadWorkActivity">

    <ImageView
        android:id="@+id/imageJob"
        android:layout_width="239dp"
        android:layout_height="198dp"
        android:layout_marginTop="50dp"
        android:onClick="selectİmage"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/select"
        tools:ignore="SpeakableTextPresentCheck" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_jobName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="326dp"
        android:layout_height="81dp"
        android:layout_marginTop="16dp"
        android:hint="@string/input_namejob"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageJob">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_namaPekerjaan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_jobPlace"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="326dp"
        android:layout_height="81dp"
        android:layout_marginTop="13dp"
        android:hint="@string/input_jobplace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_jobName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_tempatBekerja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_jobTime"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="326dp"
        android:layout_height="81dp"
        android:layout_marginTop="16dp"
        android:hint="@string/input_timeJob"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_jobPlace">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_waktuBekerja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_jobDec"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="326dp"
        android:layout_height="81dp"
        android:layout_marginTop="16dp"
        android:hint="@string/input_deksKerja"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_jobTime">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_deksripsiBekerja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="141dp"
        android:layout_height="58dp"
        android:layout_marginTop="17dp"
        android:backgroundTint="@color/browny"
        android:onClick="postUpload"
        android:text="Upload"
        app:icon="@drawable/ic_upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_jobDec" />

</androidx.constraintlayout.widget.ConstraintLayout>